deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentation
  labels:
    app: documentation
spec:
  selector:
    matchLabels:
      app: documentation
  replicas: 1
  template:
    metadata:
      labels:
        app: documentation
    spec:
      serviceAccountName: documentation
      containers:
        - name: documentation
          image: documentation
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: podinfo
              mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "cluster_name"
                fieldRef:
                  fieldPath: metadata.annotations['cluster_name']
              - path: "build_env"
                fieldRef:
                  fieldPath: metadata.annotations['build_env']
