deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentation
spec:
  type: NodePort
  selector:
    app: documentation
  ports:
    - port: 8000
